opam-version: "1.2"
name: "imandra-merlin"
version: "0.2"
author: "Simon Cruanes"
maintainer: "simon@aestheticintegration.com"
synopsis: "A reader using merlin-extend for Imandra's syntax"
license: "MIT"
build: [
    ["dune" "build" "@install" "-p" name]
]
depends: [
  "dune" {build}
  "merlin-extend"
  "ocaml-migrate-parsetree"
  "imandra-base"
  "imandra-reason-parser"
]
homepage: "https://github.com/aestheticintegration/imandra-merlin"
bug-reports: "https://github.com/aestheticintegration/imandra-merlin/issues"
dev-repo: "https://github.com/aestheticintegration/imandra-merlin.git"
