

(executable
 (name imandra_merlin_ocaml)
 (public_name ocamlmerlin-imandra)
 (modules imandra_merlin_ocaml)
 (package imandra-merlin)
 (modes byte)
 (libraries compiler-libs.common merlin-extend ocaml-migrate-parsetree imandra-base.syntax)
)


(executable
 (name imandra_merlin_reason)
 (public_name ocamlmerlin-imandra-reason)
 (modules imandra_merlin_reason)
 (package imandra-merlin)
 (modes byte)
 (libraries compiler-libs.common merlin-extend ocaml-migrate-parsetree imandra-base.syntax imandra-reason-parser)
)
